Sun Dec 01 10:17:32 2002  Balachandran  <bala@cs.wustl.edu>

        * TAO version 1.2.7 released.

Sat Nov 30 13:38:34 2002  Jeff Parsons <parsons@isis-server.isis.vanderbilt.edu>

        * orbsvcs/orbsvcs/CosNotification_Static.dsp:

	  Changes to project settings.

Sat Nov 30 09:38:33 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Transport_Cache_Manager.cpp: Added a second check after
	  holding the lock for the hash map entry in update_item ().

Fri Nov 29 19:42:12 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/orbsvcs/SSLIOP/SSLIOP_Connection_Handler.cpp:
	* orbsvcs/orbsvcs/SSLIOP/IIOP_SSL_Connection_Handler.cpp:
	* tao/Strategies/SHMIOP_Connection_Handler.cpp:
	* tao/Strategies/UIOP_Connection_Handler.cpp: Replicated the changes
	  in IIOP to the above protocols. Need to refactor this code. 

Fri Nov 29 19:30:20 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Connect_Strategy.h:
	* tao/Connect_Strategy.cpp: Added a new method post_failed_connect
	  () which could be used to do cleanup if the connect () call
	  fails. 

	* tao/Blocked_Connect_Strategy.h:
	* tao/Blocked_Connect_Strategy.cpp: Implemented the
	  post_failed_connect () method to do cleanup of the svc_handler
	  created. Since the blocked connect strategy doesnt use the
	  reactor, and hence no handle_close () call if connection
	  establishment fails,  we need to employ a seperate mechanism to
	  take care of cleanup. This fixes a memory leak.

	* tao/IIOP_Connector.cpp: Call post_failed_connect () if the
	  connect () call fails. 

Fri Nov 29 19:25:59 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Transport.cpp: Prevented the thread doing the server side
	  purging from waiting on the LF and waiting for connection
	  closure, since its of no use.

Fri Nov 29 18:13:03 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* orbsvcs/orbsvcs/Notify/ThreadPool_Task.cpp: Changed to use